# Proyecto-de-Software-UNLP

./: .gitignore  README.md
admin/: README.md  pyproject.toml
admin/src/: exportaciones.py  utils.py
admin/src/core/: colores_aleatorios.py  db.py
admin/src/core/board/: __init__.py  issue.py
admin/src/core/configuracion_sistema/: __init__.py  configuracion_general.py  configuracion_paginado.py
admin/src/core/disciplinas/: __init__.py  disciplinas.py
admin/src/core/pagos/: __init__.py  pagos.py
admin/src/core/permisos/: __init__.py  permisos.py
admin/src/core/roles/: __init__.py  roles.py
admin/src/core/socios/: __init__.py  socios.py
admin/src/core/usuarios/: __init__.py  usuarios.py
admin/src/decoradores/: login.py  permisos.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: api.py  auth.py  auth_publico.py  carnet.py  configuracion_sistema.py  disciplinas.py  issues.py  pagos.py  permisos.py  roles.py  socios.py  usuarios.py
admin/src/web/controllers/validators/: common_validators.py  validator_api.py  validator_configuracion.py  validator_disciplinas.py  validator_pagos.py  validator_socio.py  validator_usuario.py  validators_genericos.py
admin/src/web/exportaciones/: carnet_PDF.py  socios_CSV.py
admin/src/web/helpers/: handlers.py  permission.py
admin/src/web/templates/: error.html  index.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/carnet/: carnet_only.html  carnet_template.html  upload_image.html
admin/src/web/templates/configuracion_sistema/: configuracion_sistema.html
(+46 files in other folders)
