[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Manuel Trotta <nicolas.edlp98@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
